06-php-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mgw-php
  annotations:
    traefik.ingress.kubernetes.io/affinity: "true"
spec:
  selector:
    app: mgw-php
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80 # This is where the pod listens to`
